Half baked code

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,9 +18,11 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     Wire
+    adafruit/Adafruit LiquidCrystal@^2.0.4
 
 [env:uno]
 board = uno_r4_minima
 framework = arduino
 build_src_filter = +<lathe/*> -<.git/> -<.svn/>
+
 
