Switching to pros3

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,20 +9,24 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = uno
+default_envs = pros3
 
 [env]
-platform = renesas-ra
-board = uno_r4_minima
+platform = espressif32
+board = um_pros3
 framework = arduino
 monitor_speed = 115200
 lib_deps =
+    SPI
     Wire
     adafruit/Adafruit LiquidCrystal@^2.0.4
+    unexpectedmaker/UMS3 Helper@^1.0.1
 
-[env:uno]
-board = uno_r4_minima
-framework = arduino
+
+[env:pros3]
+board = um_pros3
 build_src_filter = +<lathe/*> -<.git/> -<.svn/>
+
+
 
 
