Basic tests working

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,22 +9,19 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = pros3
+default_envs = teensy
 
 [env]
-platform = espressif32
-board = um_pros3
-framework = arduino
 monitor_speed = 115200
+platform = teensy
+framework = arduino
 lib_deps =
     SPI
     Wire
-    adafruit/Adafruit LiquidCrystal@^2.0.4
-    unexpectedmaker/UMS3 Helper@^1.0.1
 
 
-[env:pros3]
-board = um_pros3
+[env:teensy]
+board = teensy41
 build_src_filter = +<lathe/*> -<.git/> -<.svn/>
 
 
