--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,16 @@ default_envs = teensy
 monitor_speed = 115200
 platform = teensy
 framework = arduino
+board = teensy41
 lib_deps =
     SPI
     Wire
+    paulstoffregen/PulsePosition@^1.0
+    arduino-libraries/Servo@^1.2.1
 
 
 [env:teensy]
-board = teensy41
+board = teensy31
 build_src_filter = +<lathe/*> -<.git/> -<.svn/>
 
 
