--- a/platformio.ini
+++ b/platformio.ini
@@ -9,22 +9,25 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = teensy
+default_envs = lathe
 
 [env]
 monitor_speed = 115200
-platform = teensy
+board = um_pros3
+platform =espressif32
 framework = arduino
-board = teensy41
 lib_deps =
     SPI
     Wire
-    paulstoffregen/PulsePosition@^1.0
-    arduino-libraries/Servo@^1.2.1
+    unexpectedmaker/UMS3 Helper@^1.0.1
+    madhephaestus/ESP32Encoder@^0.10.2
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
+    dlloydev/ESP32 ESP32S2 AnalogWrite@^5.0.2
+    adafruit/Adafruit BusIO@^1.16.0
 
-
-[env:teensy]
-board = teensy31
+[env:lathe]
+board = um_pros3
 build_src_filter = +<lathe/*> -<.git/> -<.svn/>
 
 
